# control_midi

./: CMakeLists.txt  README.md  main.cpp
MIDI/: CMakeLists.txt  comunicacion.cpp  comunicacion.hpp  mensaje_midi.cpp  mensaje_midi.hpp
MIDI/lib/rtmidi-5.0.0/doc/html/: annotated.html  classMidiInApi.html  classMidiOutApi.html  classRtMidiIn.html  classRtMidiOut.html  hierarchy.html
config/: MiniLabMK2.json  mkII_data.json
info/: Debug.minilabmk2  Default.minilabmk2  Memoria 2.minilabmk2  MiniLabMK2.ui  Piano(3).minilabmk2  a  ads.minilabmk2  asd  cmd.txt  config.txt  debug color.minilabmk2  device_settings.minilabmk2_ds  notas midi.txt  notas.txt  notas_device_settings.txt  null.json  null_1.minilabmk2  sls.txt
info/config/: template_config.json
ui/: CMakeLists.txt  Ventana.ui  backup.ui  ventana_principal.cpp  ventana_principal.h  ventana_principal.hpp  ventana_principal.ui
